# stackandqueue

./: CMakeLists.txt  README.md
.github/workflows/: test.yaml
include/: minmax_stack.hpp  queue.hpp  stack.hpp
samples/: main.cpp
test/: test_minmax_stack.cpp  test_queue.cpp  test_stack.cpp
